force-app/main/default/objects/Work_Clearance__c.object
<CustomObject>
    <fields>
        <fullName>Sign_off_Flag_Formula__c</fullName>
        <formula>IF( Sign_off_Flag__c == &apos;X&apos;, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sign off Flag Formula</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sign_off_Flag__c</fullName>
        <label>Sign off Flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spade_off__c</fullName>
        <label>Spade off</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stop_machine__c</fullName>
        <label>Stop machine</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Status__c</fullName>
        <label>System Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TOPGroupApplicantorBearer_PISUser_Text__c</fullName>
        <description>Host Id or Home Id for sync data to SAP Integration</description>
        <label>TOP Group Applicant or Bearer Text</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TOP_Supervisor_Telephone__c</fullName>
        <label>TOP Supervisor Telephone</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tag_No__c</fullName>
        <label>Tag No</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tag_Out__c</fullName>
        <label>Tag Out</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telephone_No_2__c</fullName>
        <label>Telephone No (Not used)</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Telephone_No__c</fullName>
        <label>Telephone No (Not used)</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Thaioil_Supervisor_Indicator_UI__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TOP Group Applicant or Bearer</label>
        <referenceTo>PISUsers__c</referenceTo>
        <relationshipLabel>Work Clearance</relationshipLabel>
        <relationshipName>Work_Clearance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Thaioil_Supervisor_Indicator__c</fullName>
        <label>TOP Group Applicant or Bearer</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Toxic_PPM__c</fullName>
        <label>Toxic PPM</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Toxic_Type__c</fullName>
        <label>Toxic Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Toxic__c</fullName>
        <label>Toxic</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Status__c</fullName>
        <label>User Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ventilation__c</fullName>
        <label>Ventilation</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Verification_Status__c</fullName>
        <description>Back End Field to populate Verification Status</description>
        <label>Verification Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WBS__c</fullName>
        <label>WBS</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Clearance_Description__c</fullName>
        <label>Work Clearance Description</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Clearance_Historical__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Clearance Historical</label>
        <referenceTo>THOR_Work_Clearance_Historical__c</referenceTo>
        <relationshipLabel>Work Clearance</relationshipLabel>
        <relationshipName>Work_Clearance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Work_Clearance_Status__c</fullName>
        <formula>IF(CONTAINS(System_Status__c, &quot;DLFL&quot;), &quot;Delete Flag&quot;,
    IF(CONTAINS(System_Status__c, &quot;REJC&quot;), &quot;Rejected&quot;,
        IF(CONTAINS(System_Status__c, &quot;CLSD&quot;), &quot;Closed&quot;,
            IF(CONTAINS(System_Status__c, &quot;CLSE&quot;), &quot;Closed&quot;,
                IF(CONTAINS(System_Status__c, &quot;INAC&quot;), &quot;Inactive&quot;,
                    IF(CONTAINS(System_Status__c, &quot;INC&quot;), &quot;Inactive&quot;,
                        IF(CONTAINS(System_Status__c, &quot;CRTE&quot;), &quot;Created&quot;,
                            IF(CONTAINS(System_Status__c, &quot;CRET&quot;), &quot;Created&quot;,
                                IF(CONTAINS(System_Status__c, &quot;PREP&quot;), &quot;In Progress&quot;,
                                    IF(CONTAINS(System_Status__c, &quot;CHNG&quot;), &quot;In Progress&quot;, &quot;&quot;)
                                )
                            )
                        )
                    )
                )
            )
        )
    )
)</formula>
        <label>Work Clearance Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Clearance__c</fullName>
        <externalId>true</externalId>
        <label>Work Clearance</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Detail__c</fullName>
        <label>Work Detail</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>isIRPA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isIRPA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>number_of_month__c</fullName>
        <formula>(MONTH(DATEVALUE(CreatedDate)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>number of month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Work Clearance</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Functional_Location__c</columns>
        <columns>Notification__c</columns>
        <columns>Order__c</columns>
        <columns>Extend_No__c</columns>
        <columns>Extend_Time_To__c</columns>
        <columns>Extend_Authorized_Sign__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Check_Date__c</columns>
        <columns>Check_Time__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LINK__c</columns>
        <columns>Main_Work_Center__c</columns>
        <columns>Main_Work_Center_Text__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>900645412</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Work Clearance Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Read</sharingModel>
</CustomObject>